[package]
name = "hello-wasm"
version = "0.1.0"
edition = "2018"
authors = ["LollipopFt <lollipopz1426@gmail.com>"]
description = "trying out wasm-pack"
repository = "https://github.com/LollipopFt/rust_hello_wasm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"